# HabitTracker

./: .gitignore  Makefile  ProjectPlan.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_enable_pgvector.py  0003_note_embeddings.py
backend/habittracker/: server.py
backend/habittracker/api/: deps.py  health.py
backend/habittracker/api/v1/: bottle_events.py  chat.py  dashboard.py  habit_logs.py  habits.py  notes.py  search.py
backend/habittracker/core/: config.py  langfuse_integration.py
backend/habittracker/graph/: __init__.py  builder.py  nodes.py  routing.py  state.py
backend/habittracker/models/orm/: __init__.py
backend/habittracker/models/repository/: bottle_event_repository.py  dashboard_repository.py  embedding_repository.py  habit_log_repository.py  habit_repository.py  note_repository.py  search_repository.py  (+1 more)
backend/habittracker/providers/: base.py  ollama.py  ollama_chat.py
backend/habittracker/schemas/: bottle_event.py  chat.py  conversation.py  dashboard.py  habit.py  habit_log.py  intent.py  note.py  search.py  sql_chat.py  sql_schema.py  sql_template.py
backend/habittracker/services/: chat_context_service.py  chat_intent_service.py  chat_service.py  embedding_service.py  search_service.py  sql_schema_service.py
backend/scripts/embed/: config.py  db.py  main.py  service.py
backend/scripts/seed/: bottle_events.py  habits.py  main.py  notes.py  users.py
backend/tests/fixtures/: sql_eval_questions.json
(+196 files in other folders)
